# ERE

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENCE.md  README.md  ereConfig.hpp.in
.github/workflows/: cmake.yml
dev-notes/: PLAN.md
examples/: CMakeLists.txt  general.cpp  instanced_rendering.cpp  layer_test.hpp  lighting.cpp  model_loading.cpp  model_loading.hpp  skybox.cpp
examples/assets/shaders/: fragment.glsl
examples/assets/shaders/ere-17/: quad_frag.glsl
examples/assets/shaders/ere-21/: light_fragment.glsl
examples/assets/shaders/ere-22/: skybox_vert.glsl
examples/assets/shaders/ere-23/: frag.glsl  vert.glsl
examples/ere-17/: ere_17.hpp
examples/ere-21/: light_scene.hpp
examples/ere-23/: cube.hpp  ere_23.hpp
examples/instanced_rendering/: instanced_rendering.hpp
examples/lighting/: light.hpp  lighting_test.hpp  model.hpp  model_lighting.hpp
examples/skybox/: skybox.hpp  skybox_cube.hpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: CMakeLists.txt
include/ere/: CMakeLists.txt  ere.hpp  ere_config.hpp.in
include/ere/api/: bufferAPI.hpp  camera_api.hpp  cubemap_api.hpp  framebuffer_api.hpp  index_buffer_api.hpp  projection_api.hpp  renderAPI.hpp  render_api.hpp  shader_api.hpp  texture2d_api.hpp  texture_api.hpp  vertexArrayAPI.hpp  vertex_array_api.hpp  vertex_buffer_api.hpp  windowAPI.hpp  window_api.hpp
include/ere/components/: mesh.hpp  tag.hpp  uuid.hpp
include/ere/core/: application.hpp  camera_3d.hpp  core.hpp  entryPoint.hpp  entry_point.hpp  iLayer.hpp  i_layer.hpp  imguiLayer.hpp  imgui_impl_opengl3.hpp  layer.hpp  logger.hpp  ortho_projection.hpp  perspective_projection.hpp  platformDetect.hpp  platform_detect.hpp
include/ere/ecs/: entity.hpp  scene.hpp
include/ere/events/: appEvents.hpp  app_events.hpp  events.hpp  keyEvents.hpp  key_events.hpp  mouseEvents.hpp  mouse_events.hpp  windowEvents.hpp  window_events.hpp
include/ere/imgui/: imgui_impl_opengl3.hpp  imgui_layer.hpp
include/ere/impl/: glfwWindowImpl.hpp
include/ere/impl/opengl/: glBufferImpl.hpp  glRenderImpl.hpp  glVertexArray.hpp  opengl_cubemap.hpp  opengl_framebuffer.hpp  opengl_index_buffer.hpp  opengl_renderer.hpp  opengl_renderer_conversions.hpp  opengl_shader.hpp  opengl_texture.hpp  opengl_texture2d.hpp  opengl_texture_conversions.hpp  opengl_vertex_array.hpp  opengl_vertex_buffer.hpp
include/ere/impl/window/: glfw_window.hpp
include/ere/mappings/: key_map.hpp  mouse_map.hpp
src/: CMakeLists.txt  application.cpp  camera_3d.cpp  entry_point.cpp  framebuffer_api.cpp  glBufferImpl.cpp  glRenderImpl.cpp  glVertexArray.cpp  glfwWindowImpl.cpp  glfw_window.cpp  imguiLayer.cpp  imgui_impl_opengl3.cpp  imgui_layer.cpp  layer.cpp  main.cpp  opengl_cubemap.cpp  opengl_framebuffer.cpp  opengl_index_buffer.cpp  opengl_renderer.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_texture2d.cpp  opengl_vertex_array.cpp  opengl_vertex_buffer.cpp  render_api.cpp  scene.cpp
stb_image/: CMakeLists.txt
test/: CMakeLists.txt  ere_21.hpp  general.cpp  layer_test.hpp  model_loading.hpp
test/assets/shaders/: fragment.glsl  vertex.glsl
test/assets/shaders/ere-17/: quad_vert.glsl
test/assets/shaders/ere-21/: fragment.glsl  light_fragment.glsl  light_vertex.glsl  vertex.glsl
test/ere-17/: ere_17.hpp
test/ere-21/: cube.hpp  ere_21.hpp  light_scene.hpp  material.hpp  mesh.hpp  model.hpp  model_lighting.hpp  shape.hpp  sphere.hpp
